Fixed overflow issues on map and location list.  Updated readme to include cloning url.

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 
 #map-canvas {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 36px);
 	margin: 0;
 	padding: 0;
 }
@@ -252,8 +252,9 @@ Location list
 
 #list-view {
 	float: left;
+	height: calc(100% - 36px);
 	width: 260px;
-	height: 100%;
+	overflow-y: auto;
 	background-color: #fff;
 	position: absolute;
 	display: none;
